--- a/css/forgot-password.css
+++ b/css/forgot-password.css
@@ -1,25 +1,24 @@
 /* screen - forgot-password */
 
 .forgot-password {
-  align-items: center;
+  align-items: flex-end;
   background-color: rgba(255,255,255,1.0);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 1744px;
+  height: auto;
   justify-content: flex-start;
   overflow: hidden;
   overflow-x: hidden;
   position: relative;
-  width: 1726px;
+  width: 100%;
 }
 .forgot-password .black-top-rectangle-4eduM0 {
   background-color: rgba(4,27,45,1.0);
   height: 37px;
-  left: 10px;
   position: absolute;
-  top: 304px;
-  width: 1920px;
+  width: 100%;
+  top: 0px;
 }
 .forgot-password .black-top-rectangle-BJQsbv {
   background-color: rgba(4,27,45,1.0);
@@ -31,34 +30,28 @@
 }
 .forgot-password .everything-you-se-our-services-4eduM0 {
   background-color: transparent;
-  color: var(--nero);
-  font-family: 'SegoeUI-Regular', Helvetica;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
   height: auto;
-  left: 154px;
+  left: 9%;
   letter-spacing: 0.00px;
-  line-height: 20px;
+  line-height: 32px;
   position: absolute;
   text-align: left;
-  top: 589px;
-  width: 350px;
+  top: 253px;
+  width: 600px;
+  font-size: 26px !important;
 }
 .forgot-password .flex-row-C61RwL {
-  align-items: center;
+  align-items: flex-start;
   background-color: transparent;
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   flex-shrink: 1;
-  height: 474px;
+  height: auto;
   justify-content: flex-start;
-  margin-left: 120.0px;
-  margin-top: 15px;
-  min-width: 1192px;
   position: relative;
-  width: auto;
+  width: 100%;
+    
 }
 .forgot-password .forgot-password-4eduM0 {
   background-color: transparent;
@@ -66,139 +59,153 @@
   font-family: 'OswaldRegular-Regular', Helvetica;
   font-size: 30px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bolder;
   height: auto;
-  left: 138px;
+  margin-left: 7%;
   letter-spacing: 0.00px;
   line-height: 30px;
   position: absolute;
   text-align: left;
-  top: 818px;
   white-space: nowrap;
   width: auto;
 }
 .forgot-password .grey-back-4eduM0 {
   background-color: rgba(238,238,238,1.0);
-  height: 419px;
-  left: 10px;
+  height: 80%;
   position: absolute;
-  top: 358px;
-  width: 1726px;
+  top: 53px;
+  width: 100%;
 }
 .forgot-password .image-5-dXBp89 {
+  align-items: flex-start;
   background-color: transparent;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
   flex-shrink: 1;
-  height: 474px;
-  margin-left: 86px;
-  object-fit: cover;
+  height: auto;
+  justify-content: flex-start;
+  margin-bottom: 204.0px;
+  margin-left: 12%;
+  margin-right: 2%;
+  margin-top: 158px;
   position: relative;
-  width: 520px;
+  width: 37%;
 }
 .forgot-password .image-6-RH0WJ5 {
+  align-self: flex-end;
   background-color: transparent;
-  height: 330px;
-  left: 0px;
+  flex-shrink: 1;
+  height: auto;
   object-fit: cover;
-  position: absolute;
-  top: 62px;
-  width: 462px;
+  position: relative;
+  margin-right: -27%;
+  margin-left: 9%;
+  width: 42%;
+  top: -153px;
+
+}
+.forgot-password .lines {
+  align-items: flex-start;
+  background-color: transparent;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 1;
+  height: auto;
+  justify-content: flex-start;
+  margin-bottom: 204.0px;
+  margin-left: 8%;
+  margin-right: 2%;
+  width: 40%;
 }
 .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
   background-color: transparent;
-  color: var(--nero);
-  font-family: 'SegoeUI-Regular', Helvetica;
-  font-size: 22px;
+  color: rgba(9,6,1,1.0);
+  font-family: 'OswaldRegular-Regular', Helvetica;
+  font-size: 19px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bolder;
   height: auto;
-  left: 354px;
+  margin-left: 35%;
   letter-spacing: 0.00px;
-  line-height: 22px;
+  line-height: 30px;
   position: absolute;
   text-align: left;
-  top: 823px;
-  width: 777px;
+  white-space: nowrap;
+  width: auto;
 }
 .forgot-password .line-1-4eduM0 {
   background-color: transparent;
   height: 1px;
-  left: 72px;
+  margin-left: 2%;
   object-fit: cover;
   position: absolute;
-  top: 418px;
-  width: 1604px;
+  top: 104px;
+  width: 95%;
 }
 .forgot-password .line-3-RH0WJ5 {
-  background-color: transparent;
-  height: 213px;
-  left: 930px;
-  object-fit: cover;
+  border-left: 2px solid black;
+  height: 61%;
   position: absolute;
-  top: 0px;
-  width: 19px;
+  left: 77%;
+  margin-top: -14%;
 }
-.forgot-password .line-4-RH0WJ5 {
-  background-color: transparent;
-  height: 19px;
-  left: 481px;
-  object-fit: cover;
-  position: absolute;
-  top: 194px;
-  width: 468px;
-}
+
 .forgot-password .line-8-C61RwL {
   background-color: transparent;
   flex-shrink: 1;
-  height: 1px;
-  margin-left: 30.0px;
-  margin-top: 5px;
+  height: 2px;
+  margin-left: 4%;
   object-fit: cover;
   position: relative;
-  width: 1599px;
+  top: 42px;
+  width: 94%;
 }
 .forgot-password .overlap-group-C61RwL {
-  align-self: flex-end;
   background-color: transparent;
   flex-shrink: 1;
-  height: 860px;
-  margin-right: -552px;
-  margin-top: -304px;
+  height: auto;
   position: relative;
-  width: 2288px;
+  width: 100%;
 }
 .forgot-password .overlap-group1-C61RwL {
+  align-items: flex-start;
   background-color: transparent;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: row wrap;
   flex-shrink: 1;
-  height: 392px;
-  margin-right: 148.5px;
-  margin-top: 4px;
+  height: auto;
+  justify-content: flex-start;
   position: relative;
-  width: 950px;
+  width: 100%;
 }
 .forgot-password .polygon-1-RH0WJ5 {
   background-color: transparent;
-  height: 47px;
-  left: 454px;
+  bottom: calc(74.95%);
+  height: 57px;
   object-fit: cover;
-  position: absolute;
-  top: 180px;
-  width: 57px;
+  position: relative;
+  right: calc(-46.67%);
+  margin-top: 5%;
+  width: 64px;
 }
 .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
   background-color: transparent;
   color: var(--nero);
   font-family: 'OswaldRegular-Regular', Helvetica;
-  font-size: 35px;
+  font-size: 44px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bold;
   height: auto;
-  left: 154px;
+  left: 9%;
   letter-spacing: 0.00px;
-  line-height: 35px;
+  line-height: 48px;
   position: absolute;
   text-align: left;
-  text-shadow: 0px 3px 6px rgba(0,0,0,0.161);;
-  top: 503px;
+  text-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
+  top: 155px;
   white-space: nowrap;
   width: auto;
 }
@@ -210,54 +217,500 @@
   font-style: normal;
   font-weight: 400;
   height: auto;
-  left: 72px;
+  margin-left: 2%;
   letter-spacing: 0.00px;
   line-height: 25px;
   position: absolute;
   text-align: left;
-  top: 378px;
+  top: 72px;
   white-space: nowrap;
   width: auto;
 }
 .forgot-password .swapslogoimage-transparent-4eduM0 {
   background-color: transparent;
-  height: 838px;
-  left: 573px;
+  height: auto;
+  margin-left: 25%;
   object-fit: cover;
-  position: absolute;
-  top: 0px;
-  width: 1715px;
+  position: relative;
+  width: 111%;
+  margin-top: -15%;
 }
 .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+  align-self: flex-end;
   background-color: transparent;
-  color: var(--nero);
   flex-shrink: 1;
-  font-family: 'SegoeUI-Regular', Helvetica;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
   height: auto;
-  letter-spacing: 0.00px;
-  line-height: 22px;
-  margin-bottom: 64.0px;
-  min-height: 62px;
+  object-fit: cover;
   position: relative;
-  text-align: left;
-  width: 586px;
+  margin-right: -27%;
+  margin-left: 9%;
+  width: 65%;
+  top: -466px;
+  font-size: 17px;
+
 }
-.forgot-password .yellow-thin-rectangle-4eduM0 {
+.yellow-thin-rectangle-4eduM0 {
+    background-color: rgba(249,166,2,1.0);
+    height: 8px;
+    left: 0px;
+    position: absolute;
+    top: 41px;
+    width: 100%;
+}
+
+.forgot-password .yellow-thin-rectangle-BJQsbv {
   background-color: rgba(249,166,2,1.0);
   height: 8px;
   left: 0px;
   position: absolute;
-  top: 345px;
-  width: 1930px;
+  top: 41px;
+  width: 100%;
 }
-.forgot-password .yellow-thin-rectangle-BJQsbv {
-  background-color: rgba(249,166,2,1.0);
-  height: 8px;
-  left: 10px;
+
+.forgot-password .line-4-RH0WJ5 {
+  border-bottom: 2px solid black;
   position: absolute;
-  top: 344px;
-  width: 1726px;
+  left: 54%;
+  margin-top: 4%;
+  width: 23%;
+}
+
+@media (min-width: 2000px) {
+  .forgot-password .swaps-fx-user-guide-4eduM0 {
+    font-size: 31px;
+  }
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 90px;
+    line-height: 104px;
+    top: 239px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 441px;
+    width: 538px;
+    font-size: 34px !important;
+  }
+  .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+    font-size: 36px !important;
+    margin-left: 36% !important;
+    margin-top: 12px !important;
+  }
+  .forgot-password .line-8-C61RwL {
+    top: 54px !important;
+  }
+ 
+  .forgot-password .overlap-group1-C61RwL {
+    height: 2000px;
+  }
+  .forgot-password .grey-back-4eduM0 {
+    height: 85%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-top: -22%;
+  }
+  .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+    top: -553px !important;
+    font-size: 24px !important;
+  }
+  .forgot-password .line-3-RH0WJ5 {
+    position: relative;
+    left: 132%;
+    margin-top: -4%;
+    height: 364px;
+  }
+  .forgot-password .line-4-RH0WJ5 {
+    position: relative;
+    left: 51%;
+    margin-top: 0%;
+    width: 81%;
+  }
+  .forgot-password .polygon-1-RH0WJ5 {
+    margin-top: -3%;
+  }
+  .forgot-password .image-6-RH0WJ5 {
+    top: -67%;
+  }
+}
+
+@media (max-width: 2000px) {
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 70px;
+    line-height: 78px;
+    top: 190px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 345px;
+    width: 581px;
+    font-size: 31px !important;
+  }
+  .forgot-password .grey-back-4eduM0 {
+    height: 83%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-top: -18%;
+  }
+  .forgot-password .line-3-RH0WJ5 {
+    height: 41%;
+    margin-top: -8%;
+  }
+  .forgot-password .line-4-RH0WJ5 {
+    left: 53%;
+    margin-top: 4%;
+    width: 24%;
+  }
+  .forgot-password .polygon-1-RH0WJ5 {
+    margin-top: 6%;
+  }
+}
+
+@media (max-width: 1500px) {
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 51px;
+    line-height: 60px;
+    top: 190px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 309px;
+    font-size: 30px !important;
+    width: 500px;
+  }
+  .forgot-password .forgot-password-4eduM0 {
+    font-size: 39px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .forgot-password .forgot-password-4eduM0 {
+    font-size: 66px !important;
+  }
+  .forgot-password .line-8-C61RwL {
+    top: 57px;
+    font-size: 44px;
+  }
+  .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+    font-size: 24px;
+    margin-left: 42%;
+    margin-top: 10px;
+  }
+  
+  .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+    font-size: 21px;
+  }
+}
+
+@media (max-width: 1200px) {
+ 
+  .addfunds .line-1-y1HRxC {
+    width: 50%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-left: 17%;
+    width: 123%;
+    margin-top: -16%;
+  }
+  .forgot-password .swaps-fx-user-guide-4eduM0 {
+    font-size: 20px;
+    top: 57px;
+  }
+  .forgot-password .line-1-4eduM0 {
+    top: 85px;
+  }
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 44px;
+    line-height: 48px;
+    top: 155px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 253px;
+    font-size: 24px !important;
+    width: 384px;
+    line-height: 32px;
+  }
+  .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+    font-size: 15px;
+    margin-left: 42%;
+    margin-top: 5px;
+  }
+
+.forgot-password .image-6-RH0WJ5 {
+  margin-left: 17%;
+}
+.forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+  top: -416px;
+  font-size: 12px;
+}
+.forgot-password .line-3-RH0WJ5 {
+  top: -14%;
+}
+.forgot-password .line-4-RH0WJ5 {
+  margin-top: 0%;
+  width: 15%;
+  left: 62%;
+}
+.forgot-password .polygon-1-RH0WJ5 {
+  margin-top: -5%;
+
+}
+
+}
+
+
+@media (max-width: 900px) { 
+  .forgot-password .grey-back-4eduM0  {
+    height: 75%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-left: 6%;
+    width: 138%;
+    margin-top: -12%;
+  }
+  .forgot-password .swaps-fx-user-guide-4eduM0 {
+    font-size: 20px;
+    top: 57px;
+}
+.forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+  font-size: 26px;
+  line-height: 30px;
+  top: 125px;
+  left: 11%;
+}
+.forgot-password .everything-you-se-our-services-4eduM0 {
+  top: 187px;
+  font-size: 16px !important;
+  width: 247px;
+  line-height: 19px;
+  left: 11%;
+}
+.forgot-password .forgot-password-4eduM0 {
+  font-size: 28px;
+}
+.forgot-password .line-8-C61RwL {
+  top: 37px;
+}
+.forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+  margin-left: 41%;
+  font-size: 14px;
+}
+.forgot-password .image-5-dXBp89 {
+  margin-top: 15%;
+  margin-left: 10%;
+}
+.forgot-password .image-6-RH0WJ5 {
+  margin-left: 12%;
+}
+.forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+  top: -327px;
+  font-size: 9px;
+}
+.forgot-password .line-3-RH0WJ5 {
+  height: 167px;
+  margin-top: -57%;
+  left: 101%;
+  position: relative;
+}
+.forgot-password .line-4-RH0WJ5 {
+  top: -2%;
+  width: 46%;
+  left: 56%;
+  position: relative;
+}
+.forgot-password .polygon-1-RH0WJ5 {
+  margin-top: -8%;
+}
+
+}
+
+
+@media (max-width: 600px) {
+  .forgot-password .grey-back-4eduM0 {
+    top: 23px;
+    height: 85%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-left: 6%;
+    width: 140%;
+    margin-top: -11%;
+  }
+  .forgot-password .swaps-fx-user-guide-4eduM0 {
+    font-size: 15px;
+    top: 48px;
+  }
+  .forgot-password .line-1-4eduM0 {
+    top: 70px;
+  }
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 20px;
+    line-height: 22px;
+    top: 125px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 169px;
+    font-size: 12px !important;
+    width: 187px;
+    line-height: 18px;
+  }
+  .forgot-password .forgot-password-4eduM0 {
+    font-size: 17px;
+    margin-top: 0px;
+  }
+  .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+      margin-top: 4px;
+      font-size: 7px;
+      margin-left: 227px;
+  
+  }
+  .forgot-password .line-8-C61RwL {
+    margin-top: -11px;
+  }
+  .forgot-password .image-5-dXBp89 {
+    background-color: transparent;
+    flex-shrink: 1;
+    height: auto;
+    object-fit: cover;
+    position: absolute;
+    margin-top: 24%;
+    margin-left: 58%;
+    width: 36%;
+  }
+  .forgot-password .image-6-RH0WJ5 {
+    margin-left: 6%;
+    margin-top: 83%;
+    width: 39%;
+  }
+  .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+    top: 161px;
+    font-size: 6px;
+  }
+  .forgot-password .line-3-RH0WJ5 {
+    height: 100px;
+    margin-top: 139%;
+    left: 129%;
+  }
+  .forgot-password .line-4-RH0WJ5 {
+    margin-top: 0%;
+    left: 58%;
+    width: 72%;
+  }
+  .forgot-password .polygon-1-RH0WJ5 {
+    margin-top: -5%;
+    height: 30px;
+    width: 30px;
+  }
+  .container-center-horizontal {
+    height: 800px;
+  }
+}
+
+
+
+@media (max-width: 400px) {
+  .forgot-password .grey-back-4eduM0 {
+    top: 23px;
+    height: 104%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-top: -6%;
+    width: 1;
+  }
+  .forgot-password .swaps-fx-user-guide-4eduM0 {
+    font-size: 12px;
+    top: 48px;
+  }
+  .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+    margin-top: 55px;
+    font-size: 5px;
+    margin-left: 174px;
+  }
+  
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 17px;
+    line-height: 21px;
+    top: 134px;
+  }
+
+  .forgot-password .line-1-4eduM0 {
+    top: 69px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 177px;
+    font-size: 11px !important;
+    width: 153px;
+    line-height: 14px;
+  }
+  .forgot-password .forgot-password-4eduM0 {
+    margin-top: 50px;
+  }
+  .forgot-password .line-8-C61RwL {
+    margin-top: 40px;
+  }
+  .forgot-password .image-6-RH0WJ5 {
+    margin-top: 110%;
+    margin-left: 10%;
+  }
+  .forgot-password .image-5-dXBp89 {
+    margin-top: 27%;
+  }
+  .forgot-password .to-retrieve-you-ign-up-register-dXBp89 {
+    top: 117px;
+    font-size: 3px;
+  }
+  .forgot-password .line-3-RH0WJ5 {
+    height: 100px;
+    margin-top: 148%;
+    left: 121%;
+  }
+  .forgot-password .line-4-RH0WJ5 {
+    margin-top: 0%;
+    left: 57%;
+    width: 66%;
+  }
+  .forgot-password .polygon-1-RH0WJ5 {
+    margin-top: -10%;
+  }
+}
+
+
+@media (max-width: 300px) {
+  .forgot-password .grey-back-4eduM0 {
+    height: 123%;
+  }
+  .forgot-password .swapslogoimage-transparent-4eduM0 {
+    margin-top: -7%;
+  }
+  .forgot-password .swaps-fx-user-guide-4eduM0 {
+    font-size: 10px;
+    top: 42px;
+  }
+  .forgot-password .line-1-4eduM0 {
+    top: 59px;
+  }
+  .forgot-password .swaps-fx-portal-user-guide-4eduM0 {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .forgot-password .everything-you-se-our-services-4eduM0 {
+    top: 133px;
+    font-size: 9px !important;
+    width: 159px;
+  }
+  .forgot-password .forgot-password-4eduM0 {
+   font-size: 14px;
+   margin-top: 63px;
+  }
+  .forgot-password .line-8-C61RwL {
+    margin-top: 52px;
+  }
+  .forgot-password .it-can-be-compl-ut-weve-got-you-4eduM0 {
+    margin-top: 66px;
+    margin-left: 135px;
+  }
+  .forgot-password .image-6-RH0WJ5 {
+    margin-top: 124%;
+    margin-left: 8%;
+  }
+  .forgot-password .line-3-RH0WJ5 {
+    margin-top: 151%;
+  }
+  .forgot-password .polygon-1-RH0WJ5 {
+    margin-top: -13%;
+  }
 }
